# wenyan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AST_SPEC.md  BOOTSTRAP.md  Cargo.toml  LICENSE  README.md  SPEC.md  build.py  pyproject.toml  wenyan.py  wenyan.wy  wy.spec
benchmark/results/: examples_runtime_benchmark.csv  examples_runtime_benchmark.json  examples_runtime_benchmark.md
examples/: clock.wy
lib/py/: 曆法.wy  格物.wy  畫譜.wy  西曆法.wy
scripts/: benchmark_runtime_matrix.py  compare_examples_impl.py  wywy_runner.py
src/: lib.rs
src/types/: int.rs  mod.rs
tests/: test_ast_transformer.py  test_bootstrap_prep.py  test_cli_options.py  test_compare_examples_impl.py  test_examples.py  test_importer.py  test_importlib_bridge.py  test_lexer_errors.py  test_lexer_positions.py  test_numbers.py  test_runtime_features.py  test_wywy_cli.py
wenyan/: __init__.py  __main__.py  cmdline.py  importer.py  wenyan.lark
