[package]
name = "wenyan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#name = "wenyan"
crate-type = ["cdylib"]

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
pyo3 = { version = "0.16.3", features = ["extension-module"], optional = true }
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
