[project]
name = "wenyan"
version = "0.1.0"
description = "Wenyan programming language in Python"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = [
    "lark==1.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Programming Language :: Other",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
wenyan = "wenyan.cmdline:wenyan_main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",  # 9.0 drop support of 3.8
    "tox>=4.25.0",  # 4.26.0 drop support of 3.8
    "tox-uv>=1.13.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest]
addopts = ["--doctest-modules"]

[tool.tox]
env_list = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "py313t",
    "py314",
    "py314t",
    "pypy38",
    "pypy39",
    "pypy310",
    "graalpy310",
    "graalpy311",
    "graalpy312",
]
skip_missing_interpreters = true

[tool.tox.envs]
description = "run pytest"
deps = ["pytest>=8"]
commands = [["pytest", "{posargs}"]]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.build-backend]
module-name = "wenyan"
module-root = ""
