[project]
name = "wenyan"
dynamic = ["version"]
description = "Wenyan programming language in Python"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Programming Language :: Other",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
wenyan = "wenyan:主術"
wywy = "wenyan:自舉主術"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "tox>=4.25.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "wenyan.py",
    "wenyan.wy",
]

[tool.hatch.build.targets.wheel]
include = [
    "wenyan.py",
    "wenyan.wy",
]

[tool.hatch.version]
path = "wenyan.py"
pattern = "版本號 = \"(?P<version>[^\"]+)\""

[tool.tox]
env_list = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "py313t",
    "py314",
    "py314t",
    "pypy38",
    "pypy39",
    "pypy310",
    "graalpy310",
    "graalpy311",
    "graalpy312",
]
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["python", "-m", "unittest", "discover", "-s", "tests", "-p", "test_*.py"]]

[tool.ruff.lint]
extend-select = ["I"]
